Fixed play button on mobile.

--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -54,6 +54,13 @@
                 &:hover {
                     opacity: 0.5;
                 }
+
+                i {
+
+                    @media screen and (max-width: 768px) {
+                        padding-left: 42%;
+                    }
+                }
             }
         }
     }
